<resources>
    <string name="app_name">Kanteen</string>
    <string name="action_settings">Settings</string>
    <string name="Listt">List View</string>
    <string name="title_activity_menu">Menu</string>

    <string name="MOMO">MOMO</string>
    <string name="Chowmin">Chowmin</string>
    <string name="Samosa">SAMOSA</string>
    <string name="PAKAUDA">PAKAUDA</string>
    <string name="NOODLES">Noodles</string>
    <string name="YUM">Yum</string>

    <string name="title_activity_main2">Menu</string>

    <string name="menu">Menu</string>
    <string name="about_us">About Us</string>
    <string name="contact">Contact </string>

    <string-array name="count">
        <item></item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
    </string-array>

    <string-array name="listring">
        <item>Menu</item>
        <item>Admin</item>
        <item>About Us</item>
        <item>Contact</item>
        <item>Feedback</item>

    </string-array>

    <string name="title_activity_main22">Main22Activity</string>
    <string name="Suggestion">Drop Your Sugegstion Here</string>
    <string name="email1">Your email</string>
    <string name="done">Submit</string>
    <string name="title_activity_suggetion">Suggetion</string>
    <string name="submit">Submit</string>
    <string name="Submit">Submit</string>
    <string name="title_activity_feedback">Feedback</string>
    <string name="opinion">Give Your Opinion</string>
    <string name="what">What do you think?</string>
    <string name="mail">Your email</string>
    <string name="button">Drop</string>
    <string name="title_activity_contact">Contact Us</string>
    <string name="contactus">Contact Us</string>
    <string name="sub">Submit</string>
    <string name="email">EMAIL</string>
    <string name="name">Enter your name</string>
    <string name="password">Password</string>
    <string name="dob">Date of birth</string>
    <string name="subb">Submit</string>
    <string name="rate">Current Rate In Your Opinion</string>
    <string name="title_activity_about">About Us</string>
    <string name="About1">About Us</string>
    <string name="title_activity_about1">About Us</string>
    <string name="title_activity_price">Price</string>
    <string name="price">PRICE</string>
    <string name="pric">price</string>
    <string name="ad">Add</string>
    <string name="del">Delete</string>
    <string name="menuprice">Price</string>
    <string name="title_activity_login">Login</string>
    <string name="login">Login</string>
    <string name="title_activity_orders">Orders</string>
    <string name="Drink">Cold Drink</string>
    <string name="title_activity_login1">Login</string>
    <string name="title_activity_signup">Sign Up</string>
    <string name="website">Our Website\nwww.trinitycanteen.com</string>
    <string name="phno">Phone Number \n 980812334</string>

</resources>
