<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.sudeep.listt.Menu"
    tools:showIn="@layout/activity_menu">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="What do u like today?"
        android:id="@+id/textView"
        android:layout_alignParentTop="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/MOMO"
        android:id="@+id/checkBox"
        android:layout_below="@+id/textView"
        android:layout_alignEnd="@+id/textView"
        android:layout_marginEnd="94dp"
        android:checked="false"
        android:layout_alignStart="@+id/checkBox2" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Chowmin"
        android:id="@+id/checkBox2"
        android:checked="false"
        android:layout_below="@+id/checkBox" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Samosa"
        android:id="@+id/checkBox3"
        android:layout_below="@+id/checkBox2"
        android:layout_alignEnd="@+id/checkBox2"
        android:checked="false" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/PAKAUDA"
        android:id="@+id/checkBox4"
        android:checked="false"
        android:layout_below="@+id/checkBox3"
        android:layout_alignEnd="@+id/checkBox" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/NOODLES"
        android:id="@+id/checkBox5"
        android:layout_below="@+id/checkBox4"
        android:layout_alignParentStart="true"
        android:checked="false" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/YUM"
        android:id="@+id/button"
        android:layout_below="@+id/checkBox5"
        android:layout_alignEnd="@+id/checkBox4" />
</RelativeLayout>
