<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.sudeep.listt.Contact"
    tools:showIn="@layout/activity_contact">

    <ImageView
        android:layout_width="800dp"
        android:layout_height="400dp"
        android:id="@+id/imageView2"
        android:background="@drawable/map"
        android:contentDescription="img"
        android:scaleType="fitCenter"
        android:layout_above="@+id/editText3"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editText3"
        android:hint="@string/name"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/editText6"
        android:layout_toStartOf="@+id/button3"
        android:layout_alignEnd="@+id/imageView2" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/editText4"
        android:hint="@string/email"
        android:layout_below="@+id/editText3"
        android:layout_alignStart="@+id/editText6"
        android:layout_alignEnd="@+id/editText3" />



    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subb"
        android:id="@+id/button3"
        android:layout_below="@+id/editText5"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/editText5"
        android:layout_below="@+id/editText4"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/editText4"
        android:hint="Message" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/website"
        android:id="@+id/textView8"
        android:layout_below="@+id/button3"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/button3"
        android:layout_alignEnd="@+id/button3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phno"
        android:id="@+id/textView9"
        android:layout_below="@+id/button3"
        android:layout_alignEnd="@+id/imageView2" />

</RelativeLayout>
